# doctorat-contest-backend

./: .env  Cargo.toml  Readme.md  flake.nix  schema.sql  shell.nix
Devlog/: Devlog.md
database/: edl.sql
src/: email.rs  jwt_handler.rs  main.rs  user.rs
src/apis/: account.rs  admin.rs  applicant.rs  authentication.rs  cfd.rs  mod.rs  professor.rs  vice_doyen.rs  virtual_platform.rs
src/model/: mod.rs  module.rs  reclamation.rs  result.rs  session.rs  theme.rs  user.rs  virtual_platform.rs
